# cmake-glob-test

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/src/: anotherOne.cpp  anotherOne.h  anotherTwo.cpp  anotherTwo.h
src/: one.cpp  one.h  two.cpp  two.h
